HBASE-2090 findbugs issues
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hbase/trunk@895913 13f79535-47bb-0310-9956-ffa450edef68